#
# config/Makefile.am:
# Automake file for the extra config droppings.
#
# $Id$
#

EXTRA_DIST = hostentp_ghba_r.c int_ghba_r.c pthread.c

AUX_DIST = config.guess \
           config.sub \
           install-sh \
           ltconfig \
           ltmain.sh \
           missing \
           mkinstalldirs

MAINTERCLEANFILES = $(AUX_DIST)
